# hotdesk

./: .gitignore  README.md  pyproject.toml
hotdesk/: cgroup.py  cli.py  proc.py  state.py  tmux.py  util.py
