[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotdesk"
version = "0.2.0"
description = "Co-working style desk/session coordinator for a shared Linux account GPU box (tmux + cgroup v2)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "hotdesk contributors" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.scripts]
hotdesk = "hotdesk.cli:app"
